330-geth-miner-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eth-geth-miner
  namespace: the-project
  labels:
    app: eth-geth-miner
spec:
  replicas: 3 
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: eth-geth-miner
  template:
    metadata:
      labels:
        app: eth-geth-miner
    spec:
      volumes: 
        - name: data 
          emptyDir: {} 
        - name: config 
          configMap: 
            name: eth-geth
      containers:
        - name: geth-miner
          image: ethereum/client-go:release-1.8
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: ".5"
            requests:
              cpu: "0.25"
          command: ["/bin/sh"]
          args:
          - "-c"
          - "geth --bootnodes=`cat /root/.ethereum/bootnodes` --mine --etherbase=0 --networkid=${NETWORK_ID} --ethstats=${HOSTNAME}:${ETHSTATS_SECRET}@${ETHSTATS_SVC} --verbosity=5"
          #- "geth --bootnodes=`cat /root/.ethereum/bootnodes` --mine --networkid=${NETWORK_ID} --ethstats=${HOSTNAME}:${ETHSTATS_SECRET}@${ETHSTATS_SVC} --verbosity=5"
          ports:
          - name: discovery-udp
            containerPort: 30303
            protocol: UDP
          - name: discovery-tcp
            containerPort: 30303
          volumeMounts:
          - name: data
            mountPath: /root/.ethereum
