420-geth-tx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eth-geth-tx
  namespace: the-project
  labels:
    app: eth-geth-tx
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: eth-geth-tx
  template:
    metadata:
      labels:
        app: eth-geth-tx
    spec:
      volumes: 
      - name: data 
        emptyDir: {} 
      - name: config 
        configMap: 
          name: eth-geth
      containers:
      - name: geth-tx
        image: ethereum/client-go:release-1.8
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args:
        - "-c"
        - "geth --bootnodes=`cat /root/.ethereum/bootnodes` --rpc --rpcaddr=0.0.0.0 --rpcapi=admin,db,eth,debug,miner,net,shh,txpool,personal,web3 --rpccorsdomain='*' --ws --networkid=${NETWORK_ID} --ethstats=${HOSTNAME}:${ETHSTATS_SECRET}@${ETHSTATS_SVC} --verbosity=5 --metrics --metrics.influxdb --metrics.influxdb.endpoint=http://influxdb-influxdb.consul.vmware.nayatronix.com --metrics.influxdb.database=k3s-telegraf --metrics.influxdb.username=nayatronix --metrics.influxdb.password=Obinnaya01! [...]
        ports:
        - name: rpc
          containerPort: 8545
        - name: ws
          containerPort: 8546
        - name: discovery-udp
          containerPort: 30303
          protocol: UDP
        - name: discovery-tcp
          containerPort: 30303
        volumeMounts:
        - name: data
          mountPath: /root/.ethereum
