430-geth-tx-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: eth-geth-tx
  namespace: the-project
  annotations:
    #kubernetes.io/ingress.class: traefik
    #ingress.kubernetes.io/auth-type: basic
    #ingress.kubernetes.io/auth-secret: traefik-dashboard-auth 
spec:
  #entryPoints:
  #  - web
  #  - websecure
  routes:
    - match: Host(`eth-geth-tx-the-project.consul.vmware.nayatronix.com`) 
      kind: Rule
      services:
      - name: eth-geth-tx
        port: 8545 
  tls:
    secretName: eth-geth-tx-the-project.consul.vmware.nayatronix.com
    #certResolver: vault-pki
    #secretName: traefik-dashboard-vmware-nayatronix-com-cert
